@startuml
entity User {
  * id : Long <<PK>>
  --
  name: String
  email : String
  password : String
  name : String
  address : String
  role : String
}

entity Vehicle {
  * id : Long <<PK>>
  --
  name : String
  description : String
  price_per_day : Decimal
  category : String
  serviceCategory: String
  available: String
  quantity: Int
}


entity Booking {
  * id : Long <<PK>>
  --
  user_id : Long <<FK>>
  vehicle_id : Long <<FK>>
  startDate : Date
  endDate : Date
  status : String
  delivery_address_id : Long <<FK>> [nullable]
  loading_address_id : Long <<FK>> [nullable]
  unloading_address_id : Long <<FK>> [nullable]
  price : String
}

entity Payment {
  * id : Long <<PK>>
  --
  booking_id : Long <<FK>>
  amount : Decimal
  payment_date : DateTime
  payment_status : String
  stripe_payment_id : String
}

entity Address {
  * id : Long <<PK>>
  --
  user_id : Long <<FK>>
  label: String
  street : String
  city : String
  state : String
  zip_code : String
  latitude : Decimal
  longitude : Decimal
  additionalInfo : String
}

' Связи
Booking }|--|| Vehicle : "for"
User ||--o{ Booking : "makes"
Booking ||--|| Payment : "has"
User ||--o{ Address : "has"
Booking }|--o| Address : "delivered to"

@enduml